# structural-divergence-indexer

./: .gitignore  .pre-commit-config.yaml  =0.24  ARCHITECTURE_LOG.md  ARCHITECT_PLAN.md  CHANGELOG.md  CLAUDE.md  CODER_SUMMARY.md  DESIGN.md  DRIFT_LOG.md  HEALTH_REPORT.md  HUMAN_ACTION_REQUIRED.md  INIT_REPORT.md  INTAKE_REPORT.md  JR_CODER_SUMMARY.md  MILESTONE_ARCHIVE.md  NON_BLOCKING_LOG.md  PROJECT_INDEX.md  README.md  REVIEWER_REPORT.md  SECURITY.md  SECURITY_NOTES.md  SECURITY_REPORT.md  TESTER_REPORT.md  TEST_AUDIT_REPORT.md  mkdocs.yml  plan_answers.yaml  pyproject.toml  sdi_plan_answers.yaml
.claude/: HEALTH_BASELINE.json  PLAN_STATE.md  pipeline.conf  plan_answers.yaml  plan_questions.yaml  project_version.cfg  sdi-rust-scope.md
.claude/agents/: architect.md  coder.md  jr-coder.md  reviewer.md  security.md  tester.md
.claude/index/: dependencies.json  inventory.jsonl  meta.json  tests.json  tree.txt
.claude/milestones/: MANIFEST.cfg  m01-project-skeleton-and-core-infrastructure.md  m01-project-skeleton-config-system-and-core-.md  m02-file-discovery-and-tree-sitter-parsing.md  m02-source-parsing-and-file-discovery.md  m03-additional-language-adapters.md  m03-dependency-graph-construction.md  m04-community-detection-and-boundary-managem.md  m04-dependency-graph-construction-and-metric.md  m04-dependency-graph-construction-and-metric.md.pre-tweak  m05-leiden-community-detection-and-partition.md  m05-pattern-fingerprinting-and-catalog.md  m06-pattern-fingerprinting-and-catalog.md  m06-pattern-fingerprinting-and-catalog.md.pre-tweak  m06-snapshot-assembly-delta-and-core-command.md  m07-multi-language-adapter-support.md  m09-cli-polish-and-output-formatting.md  (+17 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.tekhton/: ARCHITECTURE_LOG.md  ARCHITECT_PLAN.md  CODER_SUMMARY.md  DESIGN.md  DESIGN_v1.md  DESIGN_v2.md  HEALTH_REPORT.md  HUMAN_ACTION_REQUIRED.md  HUMAN_NOTES.md  INTAKE_REPORT.md  JR_CODER_SUMMARY.md  MILESTONE_ARCHIVE.md  PROJECT_INDEX.md  REVIEWER_REPORT.md  SECURITY_NOTES.md  SECURITY_REPORT.md  TESTER_REPORT.md  TEST_AUDIT_REPORT.md  test_dedup.fingerprint
docs/: changelog.md  ci-integration.md  cli.md  concepts.md  index.md  milestones.md  quickstart.md  validation.md
tests/: conftest.py
(+224 files in other folders)
